# Feishu-Nanobot

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  test.sh
.nanobot/: config.json
analysis/: git-collaboration-workflow.md  git-collaboration.md  memory-flows.md  proposal.md
docs/logs/: TEMPLATE.md
docs/mds/: design.md
docs/pansiqi/: gemini_explantion.md
docs/requirement/: original.md
docs/wmx/: momery.md  proposal_V1.md  proposal_V2 copy.md  proposal_V3 copy.md  proposal_V4.md
envs/: config.json  lightrag.env  nanobot_config.json  neo4jconfig.txt
git-report/: README_structure_memory.md  sprint1-sprint2-memory-channel-status-report.md
model/: install.sh
nanobot/agent/: context.py  loop.py
nanobot/agent/hiarch_memory/: __init__.py  base.py  cluster.py  decision.py  episodic.py  episodic_version1.py  itermediate.json  memory.py  router.py  scheme.py  semantic.py  shorterm.py  working.py
nanobot/agent/hiarch_memory/description/event_candidate/: confidence.md  decision_result.md  decision_signal.md  entities.md  event_name.md  evidence_message_ids.md  summary.md
nanobot/agent/hiarch_memory/description/inter_mediate/: content.md  importance.md  topic.md  ttl_days.md
nanobot/cli/: commands.py
nanobot/command/: builtin.py
nanobot/cron/: decision_review.py
nanobot/providers/: base.py  openai_compat_provider.py
nanobot/session/: manager.py
nanobot/templates/custom/: canonical.md  decision_extract.md  extract.md  memunit.md
nanobot/utils/: helpers.py
tests/: process_data.py  test_decision_extract.py  test_decision_lifecycle.py  test_pipline.py
tests/data_processed/: IrishFinanceChatML.jsonl
tests/datas/: EnterpriseGroupChat2000.jsonl  note.md
tests/utils/: provider.py  session.py
tests/workspace/memory/: .history.jsonl
